# praxis-cloak

./: .gitignore  LICENSE  NOTICE  README.md  pyproject.toml
app/backend/: __init__.py  config.py  conversation.py  crypto.py  harness_bridge.py  main.py  model_check.py  profile.py  providers.py  requirements.txt  sessions.py  store.py  transport.py
app/backend/tests/: test_model_shapes.py
app/frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
app/frontend/src/: App.tsx  index.css  main.tsx
app/frontend/src/components/: ChatMessage.tsx  ComposerArea.tsx  HighlightedText.tsx  HowItWorks.tsx  Markdown.tsx  ModelPicker.tsx  ProfileView.tsx  SettingsView.tsx  Sidebar.tsx
app/frontend/src/components/ui/: button.tsx  switch.tsx
app/frontend/src/lib/: api.ts  byok.ts  categories.ts  types.ts  utils.ts
models/: LICENSE_AND_ATTRIBUTION.md  Modelfile.relevance  Modelfile.spanfinder
models/relevance-3b/: README.md
models/spanfinder-3b/: README.md
scripts/: install.sh  run.sh
src/cloak/: __init__.py  cli.py  cloud.py  combine.py  decomposed.py  detectors.py  models.py  parse.py  pipeline.py  profile_match.py  pseudonyms.py  rehydrate.py  relevance.py  span_finder.py  synthetics.py
src/cloak/prompts/: span_finder_v0_5.txt
