[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "praxis-cloak"
version = "0.1.0"
description = "Fast, reversible PII scrubbing + rehydration for LLM queries"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Praxis", email = "hello@praxisnation.org" }]
keywords = ["pii", "privacy", "scrubbing", "llm", "de-identification"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = ["requests>=2.28"]

[project.optional-dependencies]
server = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "anthropic>=0.39",
    "openai>=1.30",
    "pydantic>=2.0",
    "cryptography>=42.0",
    "keyring>=24.0",
]
cloud = ["anthropic>=0.39"]
dev = ["pytest>=7"]

[project.scripts]
cloak = "cloak.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
cloak = ["prompts/*.txt"]
